// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<CapacityItem /> renders correctly 1`] = `
<div
  className="kubevirt-capacity__item"
>
  <h3
    className="kubevirt-capacity__item-title"
  >
    title
  </h3>
  <h6>
    50 unit available out of 100 unit
  </h6>
  <div
    className="kubevirt-capacity__graph"
    id="donut-chart-item-id"
  >
    <svg
      viewBox="0 0 200 200"
    >
      <ChartDonut
        data={
          Array [
            Object {
              "label": "Used: 50unit",
              "x": "Used",
              "y": 50,
            },
            Object {
              "label": "Available: 50unit",
              "x": "Available",
              "y": 50,
            },
          ]
        }
        height={200}
        labelComponent={
          <ChartTooltip
            style={
              Object {
                "fontSize": 20,
              }
            }
          />
        }
        labels={[Function]}
        standalone={false}
        theme={
          Object {
            "area": Object {
              "colorScale": Array [
                "#007bba",
                "#bee1f4",
                "#39a5dc",
                "#0066ff",
              ],
              "height": 301,
              "padding": 8,
              "style": Object {
                "data": Object {
                  "fill": "#bee1f4",
                  "fillOpacity": 0.4,
                  "stroke": "#39a5dc",
                  "strokeWidth": 2,
                },
                "labels": Object {
                  "fill": "#282d33",
                  "fontFamily": "'Gill Sans', 'Gill Sans MT', 'Ser­avek', 'Trebuchet MS', sans-serif",
                  "fontSize": 14,
                  "letterSpacing": "normal",
                  "padding": 10,
                  "stroke": "transparent",
                  "textAnchor": "middle",
                },
              },
              "width": 451,
            },
            "axis": Object {
              "colorScale": Array [
                "#007bba",
                "#bee1f4",
                "#39a5dc",
                "#0066ff",
              ],
              "height": 301,
              "padding": 8,
              "style": Object {
                "axis": Object {
                  "fill": "transparent",
                  "stroke": "#72767b",
                  "strokeLinecap": "round",
                  "strokeLinejoin": "round",
                  "strokeWidth": 1,
                },
                "axisLabel": Object {
                  "fill": "#282d33",
                  "fontFamily": "'Gill Sans', 'Gill Sans MT', 'Ser­avek', 'Trebuchet MS', sans-serif",
                  "fontSize": 14,
                  "letterSpacing": "normal",
                  "padding": 100,
                  "stroke": "transparent",
                  "textAnchor": "middle",
                },
                "grid": Object {
                  "fill": "none",
                  "pointerEvents": "painted",
                  "stroke": "none",
                },
                "tickLabels": Object {
                  "fill": "#282d33",
                  "fontFamily": "'Gill Sans', 'Gill Sans MT', 'Ser­avek', 'Trebuchet MS', sans-serif",
                  "fontSize": 14,
                  "letterSpacing": "normal",
                  "padding": 10,
                  "stroke": "transparent",
                },
                "ticks": Object {
                  "fill": "transparent",
                  "size": 1,
                  "stroke": "transparent",
                },
              },
              "width": 451,
            },
            "bar": Object {
              "barWidth": 10,
              "colorScale": Array [
                "#007bba",
                "#bee1f4",
                "#39a5dc",
                "#0066ff",
              ],
              "height": 301,
              "padding": 8,
              "style": Object {
                "data": Object {
                  "stroke": "none",
                },
                "labels": Object {
                  "fill": "#282d33",
                  "fontFamily": "'Gill Sans', 'Gill Sans MT', 'Ser­avek', 'Trebuchet MS', sans-serif",
                  "fontSize": 14,
                  "letterSpacing": "normal",
                  "padding": 10,
                  "stroke": "transparent",
                },
              },
              "width": 451,
            },
            "boxplot": Object {
              "boxWidth": 20,
              "colorScale": Array [
                "#007bba",
                "#bee1f4",
                "#39a5dc",
                "#0066ff",
              ],
              "height": 301,
              "padding": 8,
              "style": Object {
                "max": Object {
                  "padding": 8,
                  "stroke": "#39a5dc",
                  "strokeWidth": 1,
                },
                "maxLabels": Object {
                  "fill": "#282d33",
                  "fontFamily": "'Gill Sans', 'Gill Sans MT', 'Ser­avek', 'Trebuchet MS', sans-serif",
                  "fontSize": 14,
                  "letterSpacing": "normal",
                  "padding": 10,
                  "stroke": "transparent",
                },
                "median": Object {
                  "padding": 8,
                  "stroke": "#39a5dc",
                  "strokeWidth": 1,
                },
                "medianLabels": Object {
                  "fill": "#282d33",
                  "fontFamily": "'Gill Sans', 'Gill Sans MT', 'Ser­avek', 'Trebuchet MS', sans-serif",
                  "fontSize": 14,
                  "letterSpacing": "normal",
                  "padding": 10,
                  "stroke": "transparent",
                },
                "min": Object {
                  "padding": 8,
                  "stroke": "#39a5dc",
                  "strokeWidth": 1,
                },
                "minLabels": Object {
                  "fill": "#282d33",
                  "fontFamily": "'Gill Sans', 'Gill Sans MT', 'Ser­avek', 'Trebuchet MS', sans-serif",
                  "fontSize": 14,
                  "letterSpacing": "normal",
                  "padding": 10,
                  "stroke": "transparent",
                },
                "q1": Object {
                  "fill": "#bee1f4",
                  "padding": 8,
                },
                "q1Labels": Object {
                  "fill": "#282d33",
                  "fontFamily": "'Gill Sans', 'Gill Sans MT', 'Ser­avek', 'Trebuchet MS', sans-serif",
                  "fontSize": 14,
                  "letterSpacing": "normal",
                  "padding": 10,
                  "stroke": "transparent",
                },
                "q3": Object {
                  "fill": "#bee1f4",
                  "padding": 8,
                },
                "q3Labels": Object {
                  "fill": "#282d33",
                  "fontFamily": "'Gill Sans', 'Gill Sans MT', 'Ser­avek', 'Trebuchet MS', sans-serif",
                  "fontSize": 14,
                  "letterSpacing": "normal",
                  "padding": 10,
                  "stroke": "transparent",
                },
              },
              "width": 451,
            },
            "candlestick": Object {
              "candleColors": Object {
                "negative": "#39a5dc",
                "positive": "#bee1f4",
              },
              "colorScale": Array [
                "#007bba",
                "#bee1f4",
                "#39a5dc",
                "#0066ff",
              ],
              "height": 301,
              "padding": 8,
              "style": Object {
                "data": Object {
                  "stroke": "#39a5dc",
                  "strokeWidth": 1,
                },
                "labels": Object {
                  "fill": "#282d33",
                  "fontFamily": "'Gill Sans', 'Gill Sans MT', 'Ser­avek', 'Trebuchet MS', sans-serif",
                  "fontSize": 14,
                  "letterSpacing": "normal",
                  "padding": 10,
                  "stroke": "transparent",
                  "textAnchor": "middle",
                },
              },
              "width": 451,
            },
            "chart": Object {
              "colorScale": Array [
                "#007bba",
                "#bee1f4",
                "#39a5dc",
                "#0066ff",
              ],
              "height": 301,
              "padding": 8,
              "style": Object {
                "parent": Object {
                  "border": "1px solid #bee1f4",
                },
              },
              "width": 451,
            },
            "errorbar": Object {
              "borderWidth": 8,
              "colorScale": Array [
                "#007bba",
                "#bee1f4",
                "#39a5dc",
                "#0066ff",
              ],
              "height": 301,
              "padding": 8,
              "style": Object {
                "data": Object {
                  "fill": "transparent",
                  "stroke": "#39a5dc",
                  "strokeWidth": 2,
                },
                "labels": Object {
                  "fill": "#282d33",
                  "fontFamily": "'Gill Sans', 'Gill Sans MT', 'Ser­avek', 'Trebuchet MS', sans-serif",
                  "fontSize": 14,
                  "letterSpacing": "normal",
                  "padding": 10,
                  "stroke": "transparent",
                  "textAnchor": "middle",
                },
              },
              "width": 451,
            },
            "group": Object {
              "colorScale": Array [
                "#007bba",
                "#bee1f4",
                "#39a5dc",
                "#0066ff",
              ],
              "height": 301,
              "padding": 8,
              "width": 451,
            },
            "legend": Object {
              "colorScale": Array [
                "#007bba",
                "#bee1f4",
                "#39a5dc",
                "#0066ff",
              ],
              "gutter": 20,
              "orientation": "horizontal",
              "style": Object {
                "data": Object {
                  "type": "square",
                },
                "labels": Object {
                  "fill": "#282d33",
                  "fontFamily": "'Gill Sans', 'Gill Sans MT', 'Ser­avek', 'Trebuchet MS', sans-serif",
                  "fontSize": 14,
                  "letterSpacing": "normal",
                  "padding": 10,
                  "stroke": "transparent",
                },
                "title": Object {
                  "fill": "#282d33",
                  "fontFamily": "'Gill Sans', 'Gill Sans MT', 'Ser­avek', 'Trebuchet MS', sans-serif",
                  "fontSize": 14,
                  "letterSpacing": "normal",
                  "padding": 2,
                  "stroke": "transparent",
                },
              },
              "titleOrientation": "top",
            },
            "line": Object {
              "colorScale": Array [
                "#007bba",
                "#bee1f4",
                "#39a5dc",
                "#0066ff",
              ],
              "height": 301,
              "padding": 8,
              "style": Object {
                "data": Object {
                  "fill": "transparent",
                  "stroke": "#39a5dc",
                  "strokeWidth": 2,
                },
                "labels": Object {
                  "fill": "#282d33",
                  "fontFamily": "'Gill Sans', 'Gill Sans MT', 'Ser­avek', 'Trebuchet MS', sans-serif",
                  "fontSize": 14,
                  "letterSpacing": "normal",
                  "padding": 10,
                  "stroke": "transparent",
                  "textAnchor": "middle",
                },
              },
              "width": 451,
            },
            "pie": Object {
              "colorScale": Array [
                "#007bba",
                "#bee1f4",
                "#39a5dc",
                "#0066ff",
              ],
              "padding": 20,
              "style": Object {
                "data": Object {
                  "padding": 8,
                  "stroke": "transparent",
                  "strokeWidth": 1,
                },
                "labels": Object {
                  "fill": "#282d33",
                  "fontFamily": "'Gill Sans', 'Gill Sans MT', 'Ser­avek', 'Trebuchet MS', sans-serif",
                  "fontSize": 14,
                  "letterSpacing": "normal",
                  "padding": 8,
                  "stroke": "transparent",
                },
              },
            },
            "scatter": Object {
              "colorScale": Array [
                "#007bba",
                "#bee1f4",
                "#39a5dc",
                "#0066ff",
              ],
              "height": 301,
              "padding": 8,
              "style": Object {
                "data": Object {
                  "fill": "#bee1f4",
                  "stroke": "transparent",
                  "strokeWidth": 0,
                },
                "labels": Object {
                  "fill": "#282d33",
                  "fontFamily": "'Gill Sans', 'Gill Sans MT', 'Ser­avek', 'Trebuchet MS', sans-serif",
                  "fontSize": 14,
                  "letterSpacing": "normal",
                  "padding": 10,
                  "stroke": "transparent",
                  "textAnchor": "middle",
                },
              },
              "width": 451,
            },
            "stack": Object {
              "colorScale": Array [
                "#007bba",
                "#bee1f4",
                "#39a5dc",
                "#0066ff",
              ],
              "height": 301,
              "padding": 8,
              "style": Object {
                "data": Object {
                  "stroke": "#fff",
                  "strokeWidth": 1,
                },
              },
              "width": 451,
            },
            "tooltip": Object {
              "cornerRadius": 0,
              "flyoutStyle": Object {
                "cornerRadius": 0,
                "fill": "#fff",
                "pointerEvents": "none",
                "stroke": "#282d33",
                "strokeWidth": 1,
              },
              "pointerLength": 10,
              "style": Object {
                "fill": "#fff",
                "fontFamily": "'Gill Sans', 'Gill Sans MT', 'Ser­avek', 'Trebuchet MS', sans-serif",
                "fontSize": 14,
                "letterSpacing": "normal",
                "padding": 8,
                "pointerEvents": "none",
                "stroke": "#282d33",
                "textAnchor": "middle",
              },
            },
            "voronoi": Object {
              "colorScale": Array [
                "#007bba",
                "#bee1f4",
                "#39a5dc",
                "#0066ff",
              ],
              "height": 301,
              "padding": 8,
              "style": Object {
                "data": Object {
                  "fill": "transparent",
                  "stroke": "transparent",
                  "strokeWidth": 0,
                },
                "flyout": Object {
                  "fill": "#fff",
                  "pointerEvents": "none",
                  "strokeWidth": 1,
                },
                "labels": Object {
                  "fill": "#282d33",
                  "fontFamily": "'Gill Sans', 'Gill Sans MT', 'Ser­avek', 'Trebuchet MS', sans-serif",
                  "fontSize": 14,
                  "letterSpacing": "normal",
                  "padding": 8,
                  "pointerEvents": "none",
                  "stroke": "transparent",
                  "textAnchor": "middle",
                },
              },
              "width": 451,
            },
          }
        }
        width={200}
      />
      <ChartLabel
        style={
          Object {
            "fontSize": 25,
          }
        }
        text="50%"
        textAnchor="middle"
        x={100}
        y={88}
      />
      <ChartLabel
        style={
          Object {
            "fontSize": 15,
          }
        }
        text="Used"
        textAnchor="middle"
        x={100}
        y={112}
      />
    </svg>
  </div>
</div>
`;

exports[`<CapacityItem /> renders correctly 2`] = `
<div
  className="kubevirt-capacity__item"
>
  <h3
    className="kubevirt-capacity__item-title"
  >
    title
  </h3>
  <h6>
    <InlineLoading
      size="md"
    />
  </h6>
  <div
    className="kubevirt-capacity__graph"
    id="donut-chart-item-id"
  >
    <svg
      viewBox="0 0 200 200"
    >
      <ChartDonut
        data={
          Array [
            Object {
              "x": "Used",
              "y": 0,
            },
            Object {
              "x": "Available",
              "y": 100,
            },
          ]
        }
        height={200}
        labelComponent={
          <ChartTooltip
            style={
              Object {
                "fontSize": 20,
              }
            }
          />
        }
        labels={[Function]}
        standalone={false}
        theme={
          Object {
            "area": Object {
              "colorScale": Array [
                "#007bba",
                "#bee1f4",
                "#39a5dc",
                "#0066ff",
              ],
              "height": 301,
              "padding": 8,
              "style": Object {
                "data": Object {
                  "fill": "#bee1f4",
                  "fillOpacity": 0.4,
                  "stroke": "#39a5dc",
                  "strokeWidth": 2,
                },
                "labels": Object {
                  "fill": "#282d33",
                  "fontFamily": "'Gill Sans', 'Gill Sans MT', 'Ser­avek', 'Trebuchet MS', sans-serif",
                  "fontSize": 14,
                  "letterSpacing": "normal",
                  "padding": 10,
                  "stroke": "transparent",
                  "textAnchor": "middle",
                },
              },
              "width": 451,
            },
            "axis": Object {
              "colorScale": Array [
                "#007bba",
                "#bee1f4",
                "#39a5dc",
                "#0066ff",
              ],
              "height": 301,
              "padding": 8,
              "style": Object {
                "axis": Object {
                  "fill": "transparent",
                  "stroke": "#72767b",
                  "strokeLinecap": "round",
                  "strokeLinejoin": "round",
                  "strokeWidth": 1,
                },
                "axisLabel": Object {
                  "fill": "#282d33",
                  "fontFamily": "'Gill Sans', 'Gill Sans MT', 'Ser­avek', 'Trebuchet MS', sans-serif",
                  "fontSize": 14,
                  "letterSpacing": "normal",
                  "padding": 100,
                  "stroke": "transparent",
                  "textAnchor": "middle",
                },
                "grid": Object {
                  "fill": "none",
                  "pointerEvents": "painted",
                  "stroke": "none",
                },
                "tickLabels": Object {
                  "fill": "#282d33",
                  "fontFamily": "'Gill Sans', 'Gill Sans MT', 'Ser­avek', 'Trebuchet MS', sans-serif",
                  "fontSize": 14,
                  "letterSpacing": "normal",
                  "padding": 10,
                  "stroke": "transparent",
                },
                "ticks": Object {
                  "fill": "transparent",
                  "size": 1,
                  "stroke": "transparent",
                },
              },
              "width": 451,
            },
            "bar": Object {
              "barWidth": 10,
              "colorScale": Array [
                "#007bba",
                "#bee1f4",
                "#39a5dc",
                "#0066ff",
              ],
              "height": 301,
              "padding": 8,
              "style": Object {
                "data": Object {
                  "stroke": "none",
                },
                "labels": Object {
                  "fill": "#282d33",
                  "fontFamily": "'Gill Sans', 'Gill Sans MT', 'Ser­avek', 'Trebuchet MS', sans-serif",
                  "fontSize": 14,
                  "letterSpacing": "normal",
                  "padding": 10,
                  "stroke": "transparent",
                },
              },
              "width": 451,
            },
            "boxplot": Object {
              "boxWidth": 20,
              "colorScale": Array [
                "#007bba",
                "#bee1f4",
                "#39a5dc",
                "#0066ff",
              ],
              "height": 301,
              "padding": 8,
              "style": Object {
                "max": Object {
                  "padding": 8,
                  "stroke": "#39a5dc",
                  "strokeWidth": 1,
                },
                "maxLabels": Object {
                  "fill": "#282d33",
                  "fontFamily": "'Gill Sans', 'Gill Sans MT', 'Ser­avek', 'Trebuchet MS', sans-serif",
                  "fontSize": 14,
                  "letterSpacing": "normal",
                  "padding": 10,
                  "stroke": "transparent",
                },
                "median": Object {
                  "padding": 8,
                  "stroke": "#39a5dc",
                  "strokeWidth": 1,
                },
                "medianLabels": Object {
                  "fill": "#282d33",
                  "fontFamily": "'Gill Sans', 'Gill Sans MT', 'Ser­avek', 'Trebuchet MS', sans-serif",
                  "fontSize": 14,
                  "letterSpacing": "normal",
                  "padding": 10,
                  "stroke": "transparent",
                },
                "min": Object {
                  "padding": 8,
                  "stroke": "#39a5dc",
                  "strokeWidth": 1,
                },
                "minLabels": Object {
                  "fill": "#282d33",
                  "fontFamily": "'Gill Sans', 'Gill Sans MT', 'Ser­avek', 'Trebuchet MS', sans-serif",
                  "fontSize": 14,
                  "letterSpacing": "normal",
                  "padding": 10,
                  "stroke": "transparent",
                },
                "q1": Object {
                  "fill": "#bee1f4",
                  "padding": 8,
                },
                "q1Labels": Object {
                  "fill": "#282d33",
                  "fontFamily": "'Gill Sans', 'Gill Sans MT', 'Ser­avek', 'Trebuchet MS', sans-serif",
                  "fontSize": 14,
                  "letterSpacing": "normal",
                  "padding": 10,
                  "stroke": "transparent",
                },
                "q3": Object {
                  "fill": "#bee1f4",
                  "padding": 8,
                },
                "q3Labels": Object {
                  "fill": "#282d33",
                  "fontFamily": "'Gill Sans', 'Gill Sans MT', 'Ser­avek', 'Trebuchet MS', sans-serif",
                  "fontSize": 14,
                  "letterSpacing": "normal",
                  "padding": 10,
                  "stroke": "transparent",
                },
              },
              "width": 451,
            },
            "candlestick": Object {
              "candleColors": Object {
                "negative": "#39a5dc",
                "positive": "#bee1f4",
              },
              "colorScale": Array [
                "#007bba",
                "#bee1f4",
                "#39a5dc",
                "#0066ff",
              ],
              "height": 301,
              "padding": 8,
              "style": Object {
                "data": Object {
                  "stroke": "#39a5dc",
                  "strokeWidth": 1,
                },
                "labels": Object {
                  "fill": "#282d33",
                  "fontFamily": "'Gill Sans', 'Gill Sans MT', 'Ser­avek', 'Trebuchet MS', sans-serif",
                  "fontSize": 14,
                  "letterSpacing": "normal",
                  "padding": 10,
                  "stroke": "transparent",
                  "textAnchor": "middle",
                },
              },
              "width": 451,
            },
            "chart": Object {
              "colorScale": Array [
                "#007bba",
                "#bee1f4",
                "#39a5dc",
                "#0066ff",
              ],
              "height": 301,
              "padding": 8,
              "style": Object {
                "parent": Object {
                  "border": "1px solid #bee1f4",
                },
              },
              "width": 451,
            },
            "errorbar": Object {
              "borderWidth": 8,
              "colorScale": Array [
                "#007bba",
                "#bee1f4",
                "#39a5dc",
                "#0066ff",
              ],
              "height": 301,
              "padding": 8,
              "style": Object {
                "data": Object {
                  "fill": "transparent",
                  "stroke": "#39a5dc",
                  "strokeWidth": 2,
                },
                "labels": Object {
                  "fill": "#282d33",
                  "fontFamily": "'Gill Sans', 'Gill Sans MT', 'Ser­avek', 'Trebuchet MS', sans-serif",
                  "fontSize": 14,
                  "letterSpacing": "normal",
                  "padding": 10,
                  "stroke": "transparent",
                  "textAnchor": "middle",
                },
              },
              "width": 451,
            },
            "group": Object {
              "colorScale": Array [
                "#007bba",
                "#bee1f4",
                "#39a5dc",
                "#0066ff",
              ],
              "height": 301,
              "padding": 8,
              "width": 451,
            },
            "legend": Object {
              "colorScale": Array [
                "#007bba",
                "#bee1f4",
                "#39a5dc",
                "#0066ff",
              ],
              "gutter": 20,
              "orientation": "horizontal",
              "style": Object {
                "data": Object {
                  "type": "square",
                },
                "labels": Object {
                  "fill": "#282d33",
                  "fontFamily": "'Gill Sans', 'Gill Sans MT', 'Ser­avek', 'Trebuchet MS', sans-serif",
                  "fontSize": 14,
                  "letterSpacing": "normal",
                  "padding": 10,
                  "stroke": "transparent",
                },
                "title": Object {
                  "fill": "#282d33",
                  "fontFamily": "'Gill Sans', 'Gill Sans MT', 'Ser­avek', 'Trebuchet MS', sans-serif",
                  "fontSize": 14,
                  "letterSpacing": "normal",
                  "padding": 2,
                  "stroke": "transparent",
                },
              },
              "titleOrientation": "top",
            },
            "line": Object {
              "colorScale": Array [
                "#007bba",
                "#bee1f4",
                "#39a5dc",
                "#0066ff",
              ],
              "height": 301,
              "padding": 8,
              "style": Object {
                "data": Object {
                  "fill": "transparent",
                  "stroke": "#39a5dc",
                  "strokeWidth": 2,
                },
                "labels": Object {
                  "fill": "#282d33",
                  "fontFamily": "'Gill Sans', 'Gill Sans MT', 'Ser­avek', 'Trebuchet MS', sans-serif",
                  "fontSize": 14,
                  "letterSpacing": "normal",
                  "padding": 10,
                  "stroke": "transparent",
                  "textAnchor": "middle",
                },
              },
              "width": 451,
            },
            "pie": Object {
              "colorScale": Array [
                "#007bba",
                "#bee1f4",
                "#39a5dc",
                "#0066ff",
              ],
              "padding": 20,
              "style": Object {
                "data": Object {
                  "padding": 8,
                  "stroke": "transparent",
                  "strokeWidth": 1,
                },
                "labels": Object {
                  "fill": "#282d33",
                  "fontFamily": "'Gill Sans', 'Gill Sans MT', 'Ser­avek', 'Trebuchet MS', sans-serif",
                  "fontSize": 14,
                  "letterSpacing": "normal",
                  "padding": 8,
                  "stroke": "transparent",
                },
              },
            },
            "scatter": Object {
              "colorScale": Array [
                "#007bba",
                "#bee1f4",
                "#39a5dc",
                "#0066ff",
              ],
              "height": 301,
              "padding": 8,
              "style": Object {
                "data": Object {
                  "fill": "#bee1f4",
                  "stroke": "transparent",
                  "strokeWidth": 0,
                },
                "labels": Object {
                  "fill": "#282d33",
                  "fontFamily": "'Gill Sans', 'Gill Sans MT', 'Ser­avek', 'Trebuchet MS', sans-serif",
                  "fontSize": 14,
                  "letterSpacing": "normal",
                  "padding": 10,
                  "stroke": "transparent",
                  "textAnchor": "middle",
                },
              },
              "width": 451,
            },
            "stack": Object {
              "colorScale": Array [
                "#007bba",
                "#bee1f4",
                "#39a5dc",
                "#0066ff",
              ],
              "height": 301,
              "padding": 8,
              "style": Object {
                "data": Object {
                  "stroke": "#fff",
                  "strokeWidth": 1,
                },
              },
              "width": 451,
            },
            "tooltip": Object {
              "cornerRadius": 0,
              "flyoutStyle": Object {
                "cornerRadius": 0,
                "fill": "#fff",
                "pointerEvents": "none",
                "stroke": "#282d33",
                "strokeWidth": 1,
              },
              "pointerLength": 10,
              "style": Object {
                "fill": "#fff",
                "fontFamily": "'Gill Sans', 'Gill Sans MT', 'Ser­avek', 'Trebuchet MS', sans-serif",
                "fontSize": 14,
                "letterSpacing": "normal",
                "padding": 8,
                "pointerEvents": "none",
                "stroke": "#282d33",
                "textAnchor": "middle",
              },
            },
            "voronoi": Object {
              "colorScale": Array [
                "#007bba",
                "#bee1f4",
                "#39a5dc",
                "#0066ff",
              ],
              "height": 301,
              "padding": 8,
              "style": Object {
                "data": Object {
                  "fill": "transparent",
                  "stroke": "transparent",
                  "strokeWidth": 0,
                },
                "flyout": Object {
                  "fill": "#fff",
                  "pointerEvents": "none",
                  "strokeWidth": 1,
                },
                "labels": Object {
                  "fill": "#282d33",
                  "fontFamily": "'Gill Sans', 'Gill Sans MT', 'Ser­avek', 'Trebuchet MS', sans-serif",
                  "fontSize": 14,
                  "letterSpacing": "normal",
                  "padding": 8,
                  "pointerEvents": "none",
                  "stroke": "transparent",
                  "textAnchor": "middle",
                },
              },
              "width": 451,
            },
          }
        }
        width={200}
      />
      <ChartLabel
        style={
          Object {
            "fontSize": 25,
          }
        }
        text="Loading"
        textAnchor="middle"
        x={100}
        y={88}
      />
      <ChartLabel
        style={
          Object {
            "fontSize": 15,
          }
        }
        text="Capacity"
        textAnchor="middle"
        x={100}
        y={112}
      />
    </svg>
  </div>
</div>
`;

exports[`<CapacityItem /> renders correctly 3`] = `
<div
  className="kubevirt-capacity__item"
>
  <h3
    className="kubevirt-capacity__item-title"
  >
    title
  </h3>
  <h6>
    Not available
  </h6>
  <div
    className="kubevirt-capacity__graph"
    id="donut-chart-item-id"
  >
    <svg
      viewBox="0 0 200 200"
    >
      <ChartDonut
        data={
          Array [
            Object {
              "x": "Used",
              "y": 0,
            },
            Object {
              "x": "Available",
              "y": 100,
            },
          ]
        }
        height={200}
        labelComponent={
          <ChartTooltip
            style={
              Object {
                "fontSize": 20,
              }
            }
          />
        }
        labels={[Function]}
        standalone={false}
        theme={
          Object {
            "area": Object {
              "colorScale": Array [
                "#007bba",
                "#bee1f4",
                "#39a5dc",
                "#0066ff",
              ],
              "height": 301,
              "padding": 8,
              "style": Object {
                "data": Object {
                  "fill": "#bee1f4",
                  "fillOpacity": 0.4,
                  "stroke": "#39a5dc",
                  "strokeWidth": 2,
                },
                "labels": Object {
                  "fill": "#282d33",
                  "fontFamily": "'Gill Sans', 'Gill Sans MT', 'Ser­avek', 'Trebuchet MS', sans-serif",
                  "fontSize": 14,
                  "letterSpacing": "normal",
                  "padding": 10,
                  "stroke": "transparent",
                  "textAnchor": "middle",
                },
              },
              "width": 451,
            },
            "axis": Object {
              "colorScale": Array [
                "#007bba",
                "#bee1f4",
                "#39a5dc",
                "#0066ff",
              ],
              "height": 301,
              "padding": 8,
              "style": Object {
                "axis": Object {
                  "fill": "transparent",
                  "stroke": "#72767b",
                  "strokeLinecap": "round",
                  "strokeLinejoin": "round",
                  "strokeWidth": 1,
                },
                "axisLabel": Object {
                  "fill": "#282d33",
                  "fontFamily": "'Gill Sans', 'Gill Sans MT', 'Ser­avek', 'Trebuchet MS', sans-serif",
                  "fontSize": 14,
                  "letterSpacing": "normal",
                  "padding": 100,
                  "stroke": "transparent",
                  "textAnchor": "middle",
                },
                "grid": Object {
                  "fill": "none",
                  "pointerEvents": "painted",
                  "stroke": "none",
                },
                "tickLabels": Object {
                  "fill": "#282d33",
                  "fontFamily": "'Gill Sans', 'Gill Sans MT', 'Ser­avek', 'Trebuchet MS', sans-serif",
                  "fontSize": 14,
                  "letterSpacing": "normal",
                  "padding": 10,
                  "stroke": "transparent",
                },
                "ticks": Object {
                  "fill": "transparent",
                  "size": 1,
                  "stroke": "transparent",
                },
              },
              "width": 451,
            },
            "bar": Object {
              "barWidth": 10,
              "colorScale": Array [
                "#007bba",
                "#bee1f4",
                "#39a5dc",
                "#0066ff",
              ],
              "height": 301,
              "padding": 8,
              "style": Object {
                "data": Object {
                  "stroke": "none",
                },
                "labels": Object {
                  "fill": "#282d33",
                  "fontFamily": "'Gill Sans', 'Gill Sans MT', 'Ser­avek', 'Trebuchet MS', sans-serif",
                  "fontSize": 14,
                  "letterSpacing": "normal",
                  "padding": 10,
                  "stroke": "transparent",
                },
              },
              "width": 451,
            },
            "boxplot": Object {
              "boxWidth": 20,
              "colorScale": Array [
                "#007bba",
                "#bee1f4",
                "#39a5dc",
                "#0066ff",
              ],
              "height": 301,
              "padding": 8,
              "style": Object {
                "max": Object {
                  "padding": 8,
                  "stroke": "#39a5dc",
                  "strokeWidth": 1,
                },
                "maxLabels": Object {
                  "fill": "#282d33",
                  "fontFamily": "'Gill Sans', 'Gill Sans MT', 'Ser­avek', 'Trebuchet MS', sans-serif",
                  "fontSize": 14,
                  "letterSpacing": "normal",
                  "padding": 10,
                  "stroke": "transparent",
                },
                "median": Object {
                  "padding": 8,
                  "stroke": "#39a5dc",
                  "strokeWidth": 1,
                },
                "medianLabels": Object {
                  "fill": "#282d33",
                  "fontFamily": "'Gill Sans', 'Gill Sans MT', 'Ser­avek', 'Trebuchet MS', sans-serif",
                  "fontSize": 14,
                  "letterSpacing": "normal",
                  "padding": 10,
                  "stroke": "transparent",
                },
                "min": Object {
                  "padding": 8,
                  "stroke": "#39a5dc",
                  "strokeWidth": 1,
                },
                "minLabels": Object {
                  "fill": "#282d33",
                  "fontFamily": "'Gill Sans', 'Gill Sans MT', 'Ser­avek', 'Trebuchet MS', sans-serif",
                  "fontSize": 14,
                  "letterSpacing": "normal",
                  "padding": 10,
                  "stroke": "transparent",
                },
                "q1": Object {
                  "fill": "#bee1f4",
                  "padding": 8,
                },
                "q1Labels": Object {
                  "fill": "#282d33",
                  "fontFamily": "'Gill Sans', 'Gill Sans MT', 'Ser­avek', 'Trebuchet MS', sans-serif",
                  "fontSize": 14,
                  "letterSpacing": "normal",
                  "padding": 10,
                  "stroke": "transparent",
                },
                "q3": Object {
                  "fill": "#bee1f4",
                  "padding": 8,
                },
                "q3Labels": Object {
                  "fill": "#282d33",
                  "fontFamily": "'Gill Sans', 'Gill Sans MT', 'Ser­avek', 'Trebuchet MS', sans-serif",
                  "fontSize": 14,
                  "letterSpacing": "normal",
                  "padding": 10,
                  "stroke": "transparent",
                },
              },
              "width": 451,
            },
            "candlestick": Object {
              "candleColors": Object {
                "negative": "#39a5dc",
                "positive": "#bee1f4",
              },
              "colorScale": Array [
                "#007bba",
                "#bee1f4",
                "#39a5dc",
                "#0066ff",
              ],
              "height": 301,
              "padding": 8,
              "style": Object {
                "data": Object {
                  "stroke": "#39a5dc",
                  "strokeWidth": 1,
                },
                "labels": Object {
                  "fill": "#282d33",
                  "fontFamily": "'Gill Sans', 'Gill Sans MT', 'Ser­avek', 'Trebuchet MS', sans-serif",
                  "fontSize": 14,
                  "letterSpacing": "normal",
                  "padding": 10,
                  "stroke": "transparent",
                  "textAnchor": "middle",
                },
              },
              "width": 451,
            },
            "chart": Object {
              "colorScale": Array [
                "#007bba",
                "#bee1f4",
                "#39a5dc",
                "#0066ff",
              ],
              "height": 301,
              "padding": 8,
              "style": Object {
                "parent": Object {
                  "border": "1px solid #bee1f4",
                },
              },
              "width": 451,
            },
            "errorbar": Object {
              "borderWidth": 8,
              "colorScale": Array [
                "#007bba",
                "#bee1f4",
                "#39a5dc",
                "#0066ff",
              ],
              "height": 301,
              "padding": 8,
              "style": Object {
                "data": Object {
                  "fill": "transparent",
                  "stroke": "#39a5dc",
                  "strokeWidth": 2,
                },
                "labels": Object {
                  "fill": "#282d33",
                  "fontFamily": "'Gill Sans', 'Gill Sans MT', 'Ser­avek', 'Trebuchet MS', sans-serif",
                  "fontSize": 14,
                  "letterSpacing": "normal",
                  "padding": 10,
                  "stroke": "transparent",
                  "textAnchor": "middle",
                },
              },
              "width": 451,
            },
            "group": Object {
              "colorScale": Array [
                "#007bba",
                "#bee1f4",
                "#39a5dc",
                "#0066ff",
              ],
              "height": 301,
              "padding": 8,
              "width": 451,
            },
            "legend": Object {
              "colorScale": Array [
                "#007bba",
                "#bee1f4",
                "#39a5dc",
                "#0066ff",
              ],
              "gutter": 20,
              "orientation": "horizontal",
              "style": Object {
                "data": Object {
                  "type": "square",
                },
                "labels": Object {
                  "fill": "#282d33",
                  "fontFamily": "'Gill Sans', 'Gill Sans MT', 'Ser­avek', 'Trebuchet MS', sans-serif",
                  "fontSize": 14,
                  "letterSpacing": "normal",
                  "padding": 10,
                  "stroke": "transparent",
                },
                "title": Object {
                  "fill": "#282d33",
                  "fontFamily": "'Gill Sans', 'Gill Sans MT', 'Ser­avek', 'Trebuchet MS', sans-serif",
                  "fontSize": 14,
                  "letterSpacing": "normal",
                  "padding": 2,
                  "stroke": "transparent",
                },
              },
              "titleOrientation": "top",
            },
            "line": Object {
              "colorScale": Array [
                "#007bba",
                "#bee1f4",
                "#39a5dc",
                "#0066ff",
              ],
              "height": 301,
              "padding": 8,
              "style": Object {
                "data": Object {
                  "fill": "transparent",
                  "stroke": "#39a5dc",
                  "strokeWidth": 2,
                },
                "labels": Object {
                  "fill": "#282d33",
                  "fontFamily": "'Gill Sans', 'Gill Sans MT', 'Ser­avek', 'Trebuchet MS', sans-serif",
                  "fontSize": 14,
                  "letterSpacing": "normal",
                  "padding": 10,
                  "stroke": "transparent",
                  "textAnchor": "middle",
                },
              },
              "width": 451,
            },
            "pie": Object {
              "colorScale": Array [
                "#007bba",
                "#bee1f4",
                "#39a5dc",
                "#0066ff",
              ],
              "padding": 20,
              "style": Object {
                "data": Object {
                  "padding": 8,
                  "stroke": "transparent",
                  "strokeWidth": 1,
                },
                "labels": Object {
                  "fill": "#282d33",
                  "fontFamily": "'Gill Sans', 'Gill Sans MT', 'Ser­avek', 'Trebuchet MS', sans-serif",
                  "fontSize": 14,
                  "letterSpacing": "normal",
                  "padding": 8,
                  "stroke": "transparent",
                },
              },
            },
            "scatter": Object {
              "colorScale": Array [
                "#007bba",
                "#bee1f4",
                "#39a5dc",
                "#0066ff",
              ],
              "height": 301,
              "padding": 8,
              "style": Object {
                "data": Object {
                  "fill": "#bee1f4",
                  "stroke": "transparent",
                  "strokeWidth": 0,
                },
                "labels": Object {
                  "fill": "#282d33",
                  "fontFamily": "'Gill Sans', 'Gill Sans MT', 'Ser­avek', 'Trebuchet MS', sans-serif",
                  "fontSize": 14,
                  "letterSpacing": "normal",
                  "padding": 10,
                  "stroke": "transparent",
                  "textAnchor": "middle",
                },
              },
              "width": 451,
            },
            "stack": Object {
              "colorScale": Array [
                "#007bba",
                "#bee1f4",
                "#39a5dc",
                "#0066ff",
              ],
              "height": 301,
              "padding": 8,
              "style": Object {
                "data": Object {
                  "stroke": "#fff",
                  "strokeWidth": 1,
                },
              },
              "width": 451,
            },
            "tooltip": Object {
              "cornerRadius": 0,
              "flyoutStyle": Object {
                "cornerRadius": 0,
                "fill": "#fff",
                "pointerEvents": "none",
                "stroke": "#282d33",
                "strokeWidth": 1,
              },
              "pointerLength": 10,
              "style": Object {
                "fill": "#fff",
                "fontFamily": "'Gill Sans', 'Gill Sans MT', 'Ser­avek', 'Trebuchet MS', sans-serif",
                "fontSize": 14,
                "letterSpacing": "normal",
                "padding": 8,
                "pointerEvents": "none",
                "stroke": "#282d33",
                "textAnchor": "middle",
              },
            },
            "voronoi": Object {
              "colorScale": Array [
                "#007bba",
                "#bee1f4",
                "#39a5dc",
                "#0066ff",
              ],
              "height": 301,
              "padding": 8,
              "style": Object {
                "data": Object {
                  "fill": "transparent",
                  "stroke": "transparent",
                  "strokeWidth": 0,
                },
                "flyout": Object {
                  "fill": "#fff",
                  "pointerEvents": "none",
                  "strokeWidth": 1,
                },
                "labels": Object {
                  "fill": "#282d33",
                  "fontFamily": "'Gill Sans', 'Gill Sans MT', 'Ser­avek', 'Trebuchet MS', sans-serif",
                  "fontSize": 14,
                  "letterSpacing": "normal",
                  "padding": 8,
                  "pointerEvents": "none",
                  "stroke": "transparent",
                  "textAnchor": "middle",
                },
              },
              "width": 451,
            },
          }
        }
        width={200}
      />
      <ChartLabel
        style={
          Object {
            "fontSize": 25,
          }
        }
        text="Unknown"
        textAnchor="middle"
        x={100}
        y={88}
      />
      <ChartLabel
        style={
          Object {
            "fontSize": 15,
          }
        }
        text="Capacity"
        textAnchor="middle"
        x={100}
        y={112}
      />
    </svg>
  </div>
</div>
`;
